welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:9: error: type cyan is not a member of object java.awt.Color
	setCouleurBrosse(c:Color.cyan);
                                 ^MethodsPicture:25: error: not enough arguments for method faireV: (c: java.awt.Color)Unit.
Unspecified value parameter c.
faireV();
      ^